Wed May 25 09:35:31 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/benchmark.rb:  Restore nodoc for Benchmark::Job and
	  Benchmark::Report.  [Ruby 1.9 - Bug #4726]

Wed May 25 09:29:38 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/net/pop.rb:  Hide implementation details from RDoc.
	  [Ruby 1.9 - Bug #4711]

Wed May 25 09:26:29 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/net/ftp.rb:  Add :nodoc: for private methods.
	  [Ruby 1.9 - Bug #4710]

Wed May 25 09:19:17 2011  Eric Hodel  <drbrain@segment7.net>

	* ext/zlib/zlib.c:  Fix Document-method declarations.  Improve
	  Zlib::GzipFile's method catalog.  [Ruby 1.9 - Bug #4695]

Wed May 25 08:22:12 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/erb.rb:  Hide documentation for implementation details of ERB.
	  [Ruby 1.9 - Bug #4694]

Wed May 25 07:58:14 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tempfile.rb (Tempfile.{mkdir,rmdir}): revert for backward
	  compatibility.

Wed May 25 07:13:12 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* spec/README: update the description.

Wed May 25 07:12:16 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tempfile.rb (Tempfile.{lock,unlock}_tempfile): refactor.

Tue May 24 17:30:36 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* spec/README: fix typo.
	  patched by bowsersenior. https://github.com/ruby/ruby/pull/24

Tue May 24 07:06:34 2011  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: fail to start Tk.mainloop (exit immediately) on
	  some environment (reported on [ruby-talk:381444]).

	* ext/tk/lib/tk/canvas.rb: support creating a canvas item object from
	  an item ID number.

	* ext/tk/lib/tk/image.rb: import documents which are pull-requested.
	  [Ruby 1.9 - Feature #4595]

	* ext/tk/lib/tk/extconf.rb: search directories for 64bit library (e.g.
	  /usr/lib64), add some new configure options (see README.tcltklib),
	  and bug fix.

	* ext/tk/lib/tk/README.tcltklib: modify docs for some new configure
	  options.
